--- a/app/src/main/res/layout/activity_register_password.xml
+++ b/app/src/main/res/layout/activity_register_password.xml
@@ -55,7 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="340dp"
         android:ems="10"
-        android:hint="Re-enter yout password"
+        android:hint="@string/re_enter_your_password"
         android:inputType="textPassword"
         android:minHeight="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
