Added could update and see calendar

--- a/app/src/main/res/layout/activity_register_password.xml
+++ b/app/src/main/res/layout/activity_register_password.xml
@@ -27,7 +27,7 @@
         android:layout_width="263dp"
         android:layout_height="94dp"
         android:layout_marginBottom="28dp"
-        android:text="Enter your password to finish.  The password must have at least 8 characters, one uppercase, one lowercase and one number."
+        android:text="@string/enter_your_password_to_finish_the_password_must_have_at_least_8_characters_one_uppercase_one_lowercase_and_one_number"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.358"
